--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,13 @@
     <nav>
       <ul>
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to("Please Log In!","/login") if session[:user_id].nil? %></li>
+        <li><%= link_to "My Account", user_path(session[:user_id]) unless session[:user_id].nil? %></li>
         <li><%= link_to("Log Out #{User.find_by(id: session[:user_id]).first_name}!", "/session", method: "delete") unless session[:user_id].nil? %></li>
-        <li><%= link_to "Home", "#" %></li>
-        <li><%= link_to "Log In","#" %></li>
-        <li><%= link_to "Sign Up","#" %></li>
-        <li><%= link_to "Share A Story","#" %></li>
-        <li><%= link_to "Most Loved","#" %></li>
+        <li><%= link_to "Share A Story", new_story_path unless session[:user_id].nil? %></li>
+        <li><%= link_to "See Stories", stories_path %></li>
+        <!-- <li><%= link_to "Most Loved","#" %></li>
         <li><%= link_to "Needs Love","#" %></li>
-        <li><%= link_to "Featured","#" %></li>
+        <li><%= link_to "Featured","#" %></li> -->
       </ul>
     </nav>
   </header>
