--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <li><%= link_to "My Account", user_path(session[:user_id]) unless session[:user_id].nil? %></li>
         <li><%= link_to("Log Out #{current_user.first_name}!", "/session", method: "delete") unless session[:user_id].nil? %></li>
         <li><%= link_to "Share A Story", new_story_path unless session[:user_id].nil? %></li>
-        <li><%= link_to "See Stories", stories_path %></li>
+        <li><%= link_to "See Stories", stories_path unless session[:user_id].nil? %></li>
         <!-- <li><%= link_to "Most Loved","#" %></li>
         <li><%= link_to "Needs Love","#" %></li>
         <li><%= link_to "Featured","#" %></li> -->
