--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -118,6 +118,74 @@ input[type=search] {
 
 
 
+/*The Menu */
+
+a.menu-link {
+        float: right;
+        display: block;
+        padding: 1em;
+    }
+    nav[role=navigation] {
+      clear: both;
+      -webkit-transition: all 0.3s ease-out;  
+      -moz-transition: all 0.3s ease-out;
+      -ms-transition: all 0.3s ease-out;
+      -o-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out;
+    }
+    .js nav[role=navigation] {
+      overflow: hidden;
+      max-height: 0;
+    }
+    nav[role=navigation].active {
+      max-height: 15em;
+    }
+    nav[role=navigation] ul {
+      margin: 0;
+      padding: 0;
+      border-top: 1px solid #808080;
+    }
+    nav[role=navigation] li a {
+      display: block;
+      padding: 0.8em;
+      border-bottom: 1px solid #808080;
+    }
+    
+    @media screen and (min-width: 48.25em) {
+      a.menu-link {
+         display: none;
+      }
+      .js nav[role=navigation] {
+        max-height: none;
+      }
+      nav[role=navigation] ul {
+        margin: 0 0 0 -0.25em;
+        border: 0;
+      }
+      
+      nav[role=navigation]  li {
+        display: inline-block;
+        margin: 0 0.25em;
+      }
+      nav[role=navigation] li a {
+        border: 0;
+      }
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*The Form Styling*/
 
 * {
   -webkit-box-sizing: border-box;
@@ -231,7 +299,7 @@ textarea:focus {
 
 
 
-
+/*The Responsive Picture Grids*/
 
 .insta_story_grid {
       padding: 0.25em;
