--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,24 +5,30 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
 </head>
 <body>
-
-   <div id="pattern" class="pattern">
-    <a href="#menu" class="menu-link">Menu</a>
-    <nav id="menu" role="navigation">
-      <ul>
-        <li><%= link_to "Home", root_path %></li>
+  
+  <header role="banner" class="header">
+   <div id="pattern" class="pattern nav">
+    <a href="#menu" class="menu-link nav">Menu</a>
+    <nav id="menu" class="nav" role="navigation">
+      <ul class="nav" id="nav">
+        <li><%= link_to "Join", new_user_path if session[:user_id].nil?  %></li>
+        <li><%= link_to "Login", "/login" if session[:user_id].nil?  %></li>
         <li><%= link_to "My Account", user_path(session[:user_id]) unless session[:user_id].nil? %></li>
-        <li><%= link_to("Log Out #{current_user.first_name}!", "/session", method: "delete") unless session[:user_id].nil? %></li>
+        
         <li><%= link_to "Share A Story", new_story_path unless session[:user_id].nil? %></li>
         <li><%= link_to "See Stories", stories_path unless session[:user_id].nil? %></li>
-        <!-- <li><%= link_to "Most Loved","#" %></li>
-        <li><%= link_to "Needs Love","#" %></li>
-        <li><%= link_to "Featured","#" %></li> -->
+        <li><%= link_to("Log Out #{current_user.first_name}!", "/session", method: "delete") unless session[:user_id].nil? %></li>
       </ul>
+      <!-- <a href="#nav" class="nav-toggle">Menu</a> -->
     </nav>
-  </div>
+    </div>
+    <h1 class="logo"><a href="/"><img src="http://hashback.org/wp-content/uploads/logo_rf.png" alt="HashBack.org"></a></h1>
+
+  </header>
 
   <%= yield %>
 
