--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -7,11 +7,18 @@
   </div>
 <% end %>
 
-<%= form_tag "/session" do %>
-  <%= label_tag :email %>
-  <%= email_field_tag :email %>
-  <%= label_tag :password %>
-  <%= password_field_tag :password %>
-  
-  <%= submit_tag "Log in!" %>
-<% end %>
+<div class="login_form">
+
+  <%= form_tag "/session" do %>
+    <p>
+    <%= label_tag :email %>
+    <%= email_field_tag :email %>
+  </p>
+  <p>
+    <%= label_tag :password %>
+    <%= password_field_tag :password %>
+    </p>
+    <%= submit_tag "Log in!" %>
+  <% end %>
+
+</div>
