--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,9 @@
  *= require_tree .
  */
 
+*= require reset
+*= require layout
+*= require chrome
 /************Reset**************/
 * { 
   -moz-box-sizing: border-box; 
