--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -231,7 +231,7 @@
           <rect id="svg_1" height="194.264154" width="194.264154" y="83.584903" x="87.73585"/>
           <rect id="svg_3" height="116.226417" width="152.754719" y="105.999998" x="108.490567"/>
         </svg>
-        <p>Another configurable option for each item is the <strong>shuffle iteration count</strong> which defines how many times all items should be "spread", or shuffled, before the current photo moves to the middle. </p>
+        <p>More to come soon.</p>
       </section>
    
     </div><!-- /container -->
