--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,9 +1,17 @@
-<h1>#<%= @story.hashtag %></h1>
-<p><%= @tag_count %></p>
-<img src="<%= @story.photo_url %>" width="300px"/>
-<p>The Story: <%= @story.the_story %></p>
-<h1>Most Recent Instagram Pic</h1>
-<!-- <img src="<%= @pics %>" width="300px"/> -->
+<a href="/stories/new">Add A Story</a>
+<br/>
+<a href="/stories">Stories Home</a>
+<section class="description">
+<div><p><strong>The Hashtag</strong></p>
+<p>#<%= @story.hashtag %></p>
+<p><img src="<%= @story.photo_url %>" width="300px"/></p></div>
+<div><p><strong>The Story</strong></p>
+<p><%= @story.the_story %></p></div>
+<p>This story has been told <strong><%= @tag_count %></strong> times.</p>
+</section>
+ 
+ 
+<p><strong>Most Recent Instagram Pics</strong></p>
 
 
 
@@ -11,15 +19,12 @@
 
 <div id="pattern" class="pattern">
   <ul class="insta_story_grid">
-<% @pics.each do |pic| %>
+<% @pics_info.each do |pic| %>
   <li>
-  <img src="<%= pic %>" width="300px"/>
+  <img src="<%= pic["images"]["standard_resolution"]["url"] %>" width="300px"/>
   </li>
 <% end %>
 </ul>
 </div>
-<br/>
-<a href="/stories/new">Add A Story</a>
 
-<br/>
-<a href="/stories">Stories Home</a>
+
