--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -220,9 +220,17 @@
       <section class="description">
         <p>Hashback is a way to share to give <strong>love</strong> and <strong>encouragement</strong> digitally.</p>
         <p><strong>Here is how it works.</strong></p>
+        <div id="pattern" class="pattern">
+  <div class="col-group">
+    <div>
         <p>Share your story.</p>
+      </div><div>
         <p>Find other stories.</p>
+        </div><div>
         <p>Use the Hashtag.</p>
+      </div>
+    </div>
+  </div>
         <svg xmlns="http://www.w3.org/2000/svg" width="110px" height="110px" class="polaroid" preserveAspectRatio="xMidYMid meet" viewBox="0 0 300 300">
           <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
           <rect id="svg_2" height="0" width="1" y="108" x="123"/>
