--- a/app/assets/stylesheets/demo.css
+++ b/app/assets/stylesheets/demo.css
@@ -13,7 +13,7 @@
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-	background: #fff;
+	background: #;
 	color: #a7a0a2;
 	font-weight: 400;
 	font-size: 1em;
@@ -40,6 +40,81 @@ a:hover, a:focus {
 	color: #a7a0a2;
 }
 
+.codrops-header {
+	margin: 0 auto;
+	padding: 9em 2em;
+	text-align: center;
+	background: #444;
+	color: #f2f8f8;
+	position: relative;
+	overflow: hidden;
+}
+
+.codrops-header h1 {
+	margin: 0;
+	font-weight: 300;
+	font-size: 3.5em;
+	line-height: 1.3;
+	position: relative;
+}
+
+.codrops-header h1 span {
+	display: block;
+	padding: 0 0 0.6em 0.1em;
+	font-size: 60%;
+	opacity: 0.7;
+}
+
+/* To Navigation Style */
+.codrops-top {
+	background: #444;
+	width: 100%;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 0.69em;
+	line-height: 2.2;
+}
+
+.codrops-top a {
+	display: inline-block;
+	padding: 0 1em;
+	text-decoration: none;
+	letter-spacing: 1px;
+	color: #919191;
+}
+
+.codrops-top a:hover {
+	color: #fff;
+}
+
+.codrops-top span.right {
+	float: right;
+}
+
+.codrops-top span.right a {
+	display: block;
+	float: left;
+}
+
+.codrops-icon:before {
+	margin: 0 4px;
+	text-transform: none;
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	font-family: 'codropsicons';
+	line-height: 1;
+	speak: none;
+	-webkit-font-smoothing: antialiased;
+}
+
+.codrops-icon-drop:before {
+	content: "\e001";
+}
+
+.codrops-icon-prev:before {
+	content: "\e004";
+}
 
 .description {
 	padding: 6em 8em;
