--- a/app/assets/stylesheets/demo.css
+++ b/app/assets/stylesheets/demo.css
@@ -2,12 +2,12 @@
 @font-face {
 	font-weight: normal;
 	font-style: normal;
-	font-family: 'codropsicons';
-	src:url('fonts/codropsicons/codropsicons.eot');
-	src:url('fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
-		url('fonts/codropsicons/codropsicons.woff') format('woff'),
-		url('fonts/codropsicons/codropsicons.ttf') format('truetype'),
-		url('fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
+	font-family: "codropsicons";
+	src:url("fonts/codropsicons/codropsicons.eot");
+	src:url("fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"),
+		url("fonts/codropsicons/codropsicons.woff") format("woff"),
+		url("fonts/codropsicons/codropsicons.ttf") format("truetype"),
+		url("fonts/codropsicons/codropsicons.svg#codropsicons") format("svg");
 }
 
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
@@ -16,7 +16,7 @@ body {
 	color: #a7a0a2;
 	font-weight: 400;
 	font-size: 1em;
-	font-family: 'Lato', Arial, sans-serif;
+	font-family: "Lato", Arial, sans-serif;
 }
 
 .clearfix:before,
