--- a/app/assets/stylesheets/component.css
+++ b/app/assets/stylesheets/component.css
@@ -1,10 +1,10 @@
 @font-face {
-	font-family: "icons";
-	src:url("assets/icons.eot");
-	src:url("assets/icons.eot?#iefix") format("embedded-opentype"),
-		url("assets/icons.woff") format("woff"),
-		url("assets/icons.ttf") format("truetype"),
-		url("assets/icons.svg#icons") format("svg");
+	font-family: 'icons';
+	src:url('icons/icons.eot');
+	src:url('icons/icons.eot?#iefix') format('embedded-opentype'),
+		url('icons/icons.woff') format('woff'),
+		url('icons/icons.ttf') format('truetype'),
+		url('icons/icons.svg#icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
