--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -467,3 +467,11 @@ ul, li{
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
+#story-cover {
+text-align: center; 
+padding-top: 5px; 
+padding-bottom: 5px; 
+background: #898989; 
+color: white;
+}
